--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,8 @@
-log4j.rootLogger=INFO, CONSOLE
+log4j.rootLogger=DEBUG, CONSOLE
 
 # A1 is set to be a ConsoleAppender which outputs to System.out. 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d %-5p %c{1} %L - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d %-5p %c - %m%n
 
-log4j.logger.org.springframework=WARN, CONSOLE
+#log4j.logger.org.springframework=
