got tests working and some data importer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-solr.url=http://localhost:8080/solr/core1
-solr.buffersize=5000
-
 spring.datasource.driverClassName=net.sourceforge.jtds.jdbc.Driver
 spring.datasource.url=jdbc:jtds:sqlserver://localhost/stackexchange
 spring.datasource.username=dev
 spring.datasource.password=dev
+
+spring.data.solr.host=http://127.0.0.1:8983/solr
+
+spring.batch.job.names=importUserJob
