--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,4 +1,7 @@
 hibernate.hbm2ddl.auto=create-drop
+#hibernate.cache.use_second_level_cache=true
+#hibernate.cache.use_query_cache=true
+#hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
 #hibernate.cache.provider_class=net.sf.ehcache.hibernate.SingletonEhCacheProvider
 #hibernate.generate_statistics=true
 hibernate.default_batch_fetch_size=500
