--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,9 @@
-log4j.rootLogger=DEBUG, CONSOLE
+log4j.rootLogger=INFO, CONSOLE
 
 # A1 is set to be a ConsoleAppender which outputs to System.out. 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d %-5p %c - %m%n
 
-#log4j.logger.org.springframework=
+log4j.logger.org.springframework=INFO
+log4j.logger.org.hibernate=INFO
