--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -9,3 +9,4 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d %-5p %c{1} %L - %m%n
 log4j.logger.com.example=DEBUG
 log4j.logger.org.apache.solr=INFO
 log4j.logger.org.springframework=WARN
+log4j.logger.org.hibernate=INFO
